# cu-boids

./: CMakeLists.txt  README.md  foo.cuh  main.cu
cmake/: FindImGui.cmake
foo/: CMakeLists.txt  foo.cu  foo.cuh
glad/: CMakeLists.txt
gui/: CMakeLists.txt  main.cpp  main.cu
